[package]
name = "nydus-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4.11"
env_logger = "0.9"
tokio = "1.0"
async-trait = "0.1.56"
serde_json = "1.0.39"

# Image pull/decrypt
image-rs = { path = "../guest-components/image-rs", features = ["nydus", "kata-cc-native-tls"] }

[patch.crates-io]
oci-distribution = { git = "https://github.com/krustlet/oci-distribution.git", rev = "f44124c" }